--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ variables:
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
 stages:
-- stage: 'build .net'
+- stage: 'build netapp'
   displayName: 'generate artifacts' 
   jobs:
   - job: 'buildapp'
