Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ stages:
       vmImage: $(vmImageName)
     steps:
     
-    - script: 'cmd dir $(Build.SourcesDirectory)'
+    - script: 'dir $(Build.SourcesDirectory)'
     - task: PublishBuildArtifacts@1
 
     - task: Docker@2
