--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,10 +27,14 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+       
+    - task: DotNetCoreCLI@2
+      displayName: 'build app'
+      inputs:
+        command: build
+        arguments: '-c Release'
     
     - script: 'dir $(Build.SourcesDirectory)'
-    - task: PublishBuildArtifacts@1
-
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
