--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ stages:
          command: build
          arguments: '-c Release'
     
-      - script: 'dir $(Build.SourcesDirectory)'
+      - script: 'dir $(Build.SourcesDirectory)\bin'
         displayName: '--------list contents--------'
 - stage: Build
   displayName: Build and push stage
