--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ stages:
          command: build
          arguments: '-c Release'
     
-      - script: 'dir $(Build.SourcesDirectory)\bin'
+      - script: 'dir $(Build.SourcesDirectory)/bin'
         displayName: '--------list contents--------'
 - stage: Build
   displayName: Build and push stage
@@ -45,7 +45,7 @@ stages:
     - task: PublishBuildArtifacts@1
       displayName: 'download artifacts'
       inputs:
-        PathtoPublish: '$(Build.SourcesDirectory)\bin'
+        PathtoPublish: '$(Build.SourcesDirectory)/bin'
         artifactName: bin
         publishLocation: Container
         
