--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,12 +48,14 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-       
-    # - task: DownloadPipelineArtifact@2
-    #   displayName: 'download build artifacts for docker push'
-        
+    - task: DownloadPipelineArtifact@2
+      displayName: 'download build artifacts for docker push'
+      inputs:
+        buildType: 'current'
+        artifactName: 'bin'
+        targetPath: '$(Pipeline.Workspace)'
           
-    - script: 'dir $(Build.SourcesDirectory)/bin'
+    - script: 'dir $(Pipeline.Workspace)/bin'
       displayName: '--------list contents--------'    
 
     # - task: Docker@2
