--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,7 +55,7 @@ stages:
         artifactName: 'bin'
         targetPath: '$(Pipeline.Workspace)/bin'
           
-    - script: 'dir $(Pipeline.Workspace)/bin'
+    - script: 'dir $(Pipeline.Workspace)'
       displayName: '--------list contents--------'    
 
     - task: Docker@2
