--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,15 +55,19 @@ stages:
         artifactName: 'bin'
         targetPath: '$(Pipeline.Workspace)/bin'
           
-    - script: 'dir $(Pipeline.Workspace)'
-      displayName: '--------list contents--------'    
+    - script: |
+        'dir $(Pipeline.Workspace)/a'
+        'dir $(Pipeline.Workspace)/b'
+        'dir $(Pipeline.Workspace)/bin'
+        'dir $(Pipeline.Workspace)/s'
+         displayName: '--------list contents--------'    
 
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+    # - task: Docker@2
+    #   displayName: Build and push an image to container registry
+    #   inputs:
+    #     command: buildAndPush
+    #     repository: $(imageRepository)
+    #     dockerfile: $(dockerfilePath)
+    #     containerRegistry: $(dockerRegistryServiceConnection)
+    #     tags: |
+    #       $(tag)
