--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,15 +55,15 @@ stages:
         artifactName: 'bin'
         targetPath: '$(Pipeline.Workspace)/bin'
           
-    - script: 'dir $(Pipeline.Workspace)'
+    - script: 'dir $(Pipeline.Workspace)/bin'
       displayName: '--------list contents--------'    
 
-    # - task: Docker@2
-    #   displayName: Build and push an image to container registry
-    #   inputs:
-    #     command: buildAndPush
-    #     repository: $(imageRepository)
-    #     dockerfile: $(dockerfilePath)
-    #     containerRegistry: $(dockerRegistryServiceConnection)
-    #     tags: |
-    #       $(tag)
+    - task: Docker@2
+      displayName: Build and push an image to container registry
+      inputs:
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          $(tag)
