--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,13 @@ stages:
          PathtoPublish: '$(Build.SourcesDirectory)/bin'
          artifactName: bin
          publishLocation: Container
+      
+      - task: PublishBuildArtifacts@1
+        displayName: 'download dockerfile'
+        inputs:
+         PathtoPublish: '$(Build.SourcesDirectory)/Dockerfile'
+         artifactName: doc
+         publishLocation: Container
 
 - stage: Build
   displayName: Build and push stage
@@ -54,7 +61,14 @@ stages:
         buildType: 'current'
         artifactName: 'bin'
         targetPath: '$(Pipeline.Workspace)/bin'
-          
+
+    - task: DownloadPipelineArtifact@2
+      displayName: 'download dockerfile for docker push'
+      inputs:
+        buildType: 'current'
+        artifactName: 'doc'
+        targetPath: '$(Pipeline.Workspace)'
+              
     - script: 'dir $(Pipeline.Workspace)/bin'
       displayName: '--------list contents--------'    
 
@@ -63,7 +77,7 @@ stages:
       inputs:
         command: buildAndPush
         repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
+        dockerfile: '$(Pipeline.Workspace)/Dockerfile'
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
