Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
 stages:
   - stage: 'here we are building the app'
     jobs:
-    - job: 'build-mvc-job'
+    - job: 'build_mvc_job'
       steps:
       - task: DotNetCoreCLI@2
         displayName: 'now building'
