--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,6 @@ stages:
       
       - script: |
          echo '-----------------build files--------------------'
-         echo 'cmd dir $(Build.ArtifactStagingDirectory)'
+         echo 'dir $(Build.ArtifactStagingDirectory)'
          
 
