Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ stages:
           arguments: '-c Release -o $(Build.ArtifactStagingDirectory)'
       
       - script: |
-         echo '-----------------build files--------------------'
-         'dir $(Build.ArtifactStagingDirectory)'
+         echo '-------Displaying contents of work dir-------'
+         echo 'dir $(Build.SourcesDirectory)'
          
 
