--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,6 @@ stages:
       
       - script: |
          echo '-------Displaying contents of work dir-------'
-         echo 'dir $(Build.SourcesDirectory)'
+         dir '$(Build.SourcesDirectory)'
          
 
